--- a/k8s-manifests/badstats.yml
+++ b/k8s-manifests/badstats.yml
@@ -52,6 +52,8 @@ spec:
                 secretKeyRef:
                   name: badstats
                   key: flask_secret
+            - name: FLASK_ENV
+              value: "production"
           volumeMounts:
             - mountPath: /usr/src/app/instance
               name: data
